<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    <com.example.samplecompasstracker.CompassView
        android:id="@+id/compass_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </FrameLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:paddingRight="7dp"
            android:paddingLeft="7dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/destination_button"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_alignParentBottom="true"
                android:text="Set Destination"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/longitute_layout"
                android:hint="@string/longitude_hint_text"
                android:maxLines="1"
                android:inputType="numberDecimal|numberSigned"
                android:layout_above="@id/destination_button"
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/longitute_et"
                    android:maxLines="1"
                    android:inputType="numberDecimal|numberSigned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/latitute_layout"
                android:hint="@string/latitude_hint_text"
                android:maxLines="1"
                android:layout_above="@id/longitute_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/latitute_et"
                    android:maxLines="1"
                    android:inputType="numberDecimal|numberSigned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>

        <LinearLayout
            android:paddingLeft="7dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <ImageView
                    android:id="@+id/user_location_icon"
                    android:src="@drawable/ic_gps_white"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_toRightOf="@id/user_location_icon"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingLeft="9dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                    android:id="@+id/user_location_text"
                    android:text="Your Location"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/user_latitude"
                    android:layout_marginTop="3dp"
                    android:text="Lat: 52.4353"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/user_longitude"
                    android:layout_marginTop="3dp"
                    android:text="Lng: 52.4353"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <ImageView
                    android:id="@+id/user_destination_icon"
                    android:src="@drawable/ic_location_white"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_toRightOf="@id/user_destination_icon"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingLeft="9dp"
                    android:paddingBottom="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/user_destination_text"
                        android:text="@string/destination_location_text"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/destination_latitude"
                        android:layout_marginTop="3dp"
                        android:text="@string/lat_text"
                        android:textSize="15sp"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/destination_longitude"
                        android:layout_marginTop="3dp"
                        android:text="@string/lng_text"
                        android:textSize="15sp"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>